--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="green_right">#8FBC94</color>
     <color name="red_wrong">#ED9282</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorSky">#d9a353</color>
 </resources>
