--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,18 +22,19 @@
                 android:layout_height="125dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/ic_launcher_foreground"
+                android:src="@mipmap/health_insurance"
                 />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="위기탈출 넘버원...?"
-                android:textColor="#ffffff"
-                android:textSize="25dp"
-                android:textStyle="bold"
                 android:layout_marginTop="10dp"
-                />
+                android:fontFamily="@font/tmonmonsori"
+                android:text="시켜줘,,,,,\n 너의 명예소방관 "
+                android:textColor="@color/colorWhite"
+                android:textSize="25dp"
+                android:textStyle="italic" />
 
         </LinearLayout>
 
@@ -54,7 +55,7 @@
                 android:drawableStart="@drawable/ic_person_black_24dp"
                 android:drawableLeft="@drawable/ic_person_black_24dp"
                 android:layout_marginTop="50dp"
-                android:background="@drawable/shape_stroke_layout"
+                android:background="@drawable/shape_dark_stroke_layout"
                 />
 
             <EditText
@@ -70,7 +71,7 @@
                 android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                 android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/shape_stroke_layout"
+                android:background="@drawable/shape_dark_stroke_layout"
                 />
 
             <Button
